--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "https://github.com/trs/"
+    "url": "https://github.com/trs/typescript-node-template"
   },
   "author": "Tyler Stewart",
   "license": "MIT",
@@ -92,7 +92,7 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
+    "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.0.0",
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.5",
