--- a/package.json
+++ b/package.json
@@ -24,34 +24,26 @@
       "project": "./tsconfig.json"
     },
     "plugins": [
-      "@typescript-eslint",
-      "prettier"
+      "@typescript-eslint"
     ],
     "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
       "plugin:@typescript-eslint/recommended",
-      "prettier",
-      "prettier/@typescript-eslint"
+      "plugin:@typescript-eslint/recommended-requiring-type-checking"
     ],
     "rules": {
-      "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/indent": [
         "error",
         2
       ],
-      "@typescript-eslint/explicit-function-return-type": "off",
       "@typescript-eslint/no-unused-vars": [
         "warn",
         {
           "argsIgnorePattern": "_"
         }
-      ],
-      "prettier/prettier": "error"
+      ]
     }
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "singleQuote": true,
-    "arrowParens": "always"
   },
   "lint-staged": {
     "*.ts": [
@@ -91,20 +83,17 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.0.0",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.5",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^2.4.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.2.0",
-    "prettier": "^1.17.1",
-    "semantic-release": "^15.13.15",
+    "@commitlint/config-conventional": "^8.1.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "eslint": "^6.3.0",
+    "husky": "^3.0.5",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.2.5",
+    "semantic-release": "^15.13.24",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1"
+    "typescript": "^3.6.2"
   }
 }
