feat: update eslint rules

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
         {
           "argsIgnorePattern": "_"
         }
-      ]
+      ],
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/no-explicit-any": 0
     }
   },
   "lint-staged": {
