fix: update packages, tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,25 @@
 {
-    "compilerOptions": {
-      "outDir": "dist",
-      "module": "commonjs",
-      "target": "es2017",
-      "sourceMap": true,
-      "strict": true,
-      "moduleResolution": "node",
-      "declaration": true
-    },
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "**/*.spec.ts"
-    ]
-  }
+  "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "src/*"
+      ],
+      "*": [
+        "node_modules/*",
+        "src/types/*"
+      ],
+    }
+  },
+  "include": [
+    "src/**/*"
+  ]
+}
